Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89124

Qt 6 for Python: rcc/uic still produce import PySide 2

XMLWordPrintable

    • All
    • fc9cda5f08ac848e88f63dd4a07c08b2fbc6bf17 (qt/qtbase/6.0.0) 539a16a69fa1ef302cf4eb97ff5a7f8afb606d15 (qt/qtbase/6.0) e4395f3f680ec30ad6be4eadf7cf0e1ff64d7615 (qt/qtbase/dev)

      Steps to reproduce

      • regenerate ui/rcc files for example in PySide6/examples/widgets/mainwindows/mdi/
      • Note example fails since it still imports PySide2

        For Gerrit Dashboard: QTBUG-89124
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes